aks-deployment/dynamic-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynamic-services-ingress
  namespace: aipns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Optional: increase timeouts for long-lived WS/Socket.IO connections
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lfn.essedum.anuket.iol.unh.edu
      secretName: essedum-secret
  rules:
    - host: lfn.essedum.anuket.iol.unh.edu
      http:
        paths:
          - path: /apps(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: proxy-service
                port:
                  number: 8080
